[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
tesseract = "0.15.1"
tokio = { version = "1.35.1" }
axum = "0.7.4"
