[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcap = "0.0.3"
tokio = { version = "1.35.1" }
axum = "0.7.4"
image = "0.24.8"
serde = { version = "1.0.197", features = ["derive"] }
